--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="Jacob Erickson" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Hi, I'm Jacob Erickson, a Software Developer, UofT Computer Science Student, and sock enthusiast in Toronto." />
+    <meta property="og:image" content="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAzxAAAAJDE1OTNhNDdhLTA3NDgtNDA0ZS04YmVlLWU4MjExNTJiMjdiZA.jpg" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/jaruslogo.png">
     <link href="//vjs.zencdn.net/5.11/video-js.css" rel="stylesheet" type="text/css" />
@@ -12,7 +17,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need JavaScript enabled to run the full features of this site!
     </noscript>
     <div id="root"></div>
   </body>
