small message change

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <noscript>
-      You need JavaScript enabled to run the full features of this site!
+      You need JavaScript enabled to see this site!
     </noscript>
     <div id="root"></div>
     <!-- Google Analytics -->
